# GalNet-Server

./: .gitignore  Cargo.toml  README.md
Server/: server-main.cpp
galnet-server/: Cargo.toml
galnet-server/src/: handlers.rs  main.rs  ws.rs
src/: main.rs
