[package]
name = "galnet-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "*"